# tailscale-manager

./: .env.example  .gitignore  README.md  TODO.md  build.bat  known_bugs.md  pack.py  pyproject.toml  run.bat  tailscale_api_reference.md
src/tailscale_manager/: __init__.py  acl_resolver.py  api_client.py  app.py  config.py  constants.py  services.py  tailscale_cli.py
src/tailscale_manager/views/: acls.py  audit_logs.py  auth_keys.py  dashboard.py  device_posture.py  dns.py  exit_nodes.py  peers.py  serve_funnel.py  settings.py  tailnet_settings.py  users.py  webhooks.py
src/tailscale_manager/widgets/: loading.py  peer_tile.py  status_card.py
tests/: conftest.py  test_api_client.py
