[project]
name = "tailscale-manager"
version = "0.1.0"
description = "Full-featured Tailscale management GUI built with Flet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tailscale-manager = "tailscale_manager:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/tailscale_manager"]
